# newt

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
completions/: _newt
pkg/: PKGBUILD  README.md
src/: cli.rs  debug.rs  edit.rs  error.rs  lib.rs  main.rs  notes_dir.rs
src/config/: env.rs  mod.rs  parse.rs  sh.rs
src/util/: env.rs  mod.rs  sh.rs
