[package]
name = "newt"
version = "0.1.0"
authors = ["John Andrews <theunderdog09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sha1 = "0.6.0"
structopt = "0.3.21"
thiserror = "1.0.23"
